fix bug in get posts
